# Aave-DeFi-Automated-Trading-MEV-System

./: .gitignore  CONTRIBUTING.md  COUNTER.md  Implementation Plan.md  Implementation_Plan.md  Makefile  README.md  auto_commit.sh
.github/workflows/: test.yml
contracts/src/: MockExecutor.sol
contracts/src/interfaces/: IAavePool.sol
docs/: Phases & Acceptance Criteria.md  implementation.md  structure.md
services/: README.md
services/executor-rust/: Cargo.toml  README.md
services/executor-rust/src/: config.rs  lib.rs  main.rs
services/executor-rust/src/chain/: manager.rs
services/executor-rust/src/chain/services/: manager.rs
services/gateway-go/: README.md
services/quant-python/: README.md
tests/robot/suites/integration/: 000_E2E_Test_Suite.robot  001_E2E_Test_Suite.robot
